samples/_failures_safe/1761329782_418cd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef07631d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ef07631d.c:181:5: error: expected declaration or statement at end of input
  181 |     printf("Dijkstra distances from vertex %d:\n", start);
      |     ^~~~~~
